<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

<LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_title"
        android:paddingLeft="8sp"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8sp"
        android:text="@string/settings_description" />

    
    <TextView
        android:id="@+id/description3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="8sp"
        android:text="@string/settings_description3" />
    
    <TextView
        android:id="@+id/selectedImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="8sp"
        android:textSize="14sp"
        android:visibility="gone" />
    <Button
        android:id="@+id/selectLayersButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:drawableLeft="@android:drawable/ic_menu_gallery"
        android:layout_marginLeft="16sp"
        android:layout_marginRight="16sp"
        android:text="@string/settings_choose_button" />

    
    <TextView
        android:id="@+id/description2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="8sp"
        android:text="@string/settings_description2" />
    
</LinearLayout>

</ScrollView>